[tool.pyright]

reportMissingImports = true
reportMissingTypeStubs = true
reportGeneralTypeIssues = "error"
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportAttributeAccessIssue = false
reportTypeCommentUsage = true
reportMissingDocstrings = "error"

pythonVersion = "3.11"
pythonPlatform = "Windows"

extraPaths = ["..", "tests/fixtures/include_dir/"]

executionEnvironments = [
    { root = "src/bpytest/blender_module/main.py", extraPaths = [
        "src/bpytest/blender_module/",
        "src/bpytest/common",
    ] },
    { root = "src/bpytest/blender_module/bpytest/", extraPaths = [
        "src/bpytest/blender_module/",
        "src/bpytest/common",
    ] }
]

[tool.pytest.ini_options]
addopts = ["-p", "no:warnings"]
norecursedirs = ["tests/fixtures/*"]

[tool.bpytest]
norecursedirs = ["tests/unit/*"]
include = ["tests/fixtures/include_dir/"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bpytest"
version = "0.1"
dependencies = ["toml==0.10.2"]
requires-python = ">=3.7"

[project.scripts]
bpytest = "bpytest.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
